compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/incompleteVal.kt
// FIR_IDENTICAL
package c

val i =<!SYNTAX!><!>
